Add robots.txt to wget ignore list
Getting latest Unicode data includes robots.txt recursively which is now added to wget reject (-R) list

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           rm -rf Unicode
           mkdir Unicode
-          wget -r --no-parent -R "index.html*" https://www.unicode.org/Public/UCD/latest/ -nH
+          wget -r --no-parent -R "index.html*,robots.txt" https://www.unicode.org/Public/UCD/latest/ -nH
           mv Public Unicode
 
       - name: Add files over 100MB to .gitignore to avoid errors on pushing
